argocd/manifests/prod/infra/pocket-id/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`pocket-id.pengiuns.com`)
    kind: Rule
    middlewares: # added together with middleware
      - name: proxy-headers
        namespace: pocket-id
    services:
      - name: pocket-id
        port: 80
